# aha

./: Aha.hs  AhaSTM.hs  AutoMap.hs  Board.hs  JSON.hs  README.md  Server.hs  ServerState.hs  aha.cabal  readme.md
app/: Server.hs
static/: admin.html  admin.js  board.html  board.js  common.js  reporter.html  reporter.js  viewer.html  viewer.js
